--- a/css/Carrie-portfolio-resume.css
+++ b/css/Carrie-portfolio-resume.css
@@ -71,6 +71,7 @@ body {
 	margin-top: 170px;
 	margin-bottom: 180px;
 	z-index: 99;
+	text-align: center;
 }
 /* image hover effect */
 .title-arch {
