--- a/css/Carrie-portfolio-resume.css
+++ b/css/Carrie-portfolio-resume.css
@@ -87,6 +87,8 @@ height: 300px;
 background-image: url(../image/pdf-shape.jpg);
 background-size: cover;
 background-position: center;
+margin-left: auto;
+margin-right: auto;
 }
 
 .project-hover {
